# notebook_bot_tg

./: .env.example  .gitignore  Dockerfile  README.md  README_DEPLOY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
apps/telegram_bot/: __init__.py  context.py  db.py  handlers.py  intent_parser.py  keyboards.py  llm_parser.py  main.py  models.py  obsidian.py  prompts.py
migrations/: env.py
migrations/versions/: 0001_initial.py
notes_bot/: .env.example  .gitignore  Dockerfile  README_DEPLOY.md  docker-compose.yml  requirements.txt
notes_bot/app/: config.py  context.py  db.py  events.py  handlers.py  intent_parser.py  keyboards.py  llm_parser.py  main.py  models.py  obsidian.py  prompts.py
notes_bot/scripts/: manual_test.md
notes_bot/tests/: __init__.py  test_context.py  test_obsidian_export.py  test_task_management.py
prompts/: README.md
scripts/: backup.sh  import_jsonl_to_sqlite.py
src/telegram_bot/: bot.py  storage.py  tasks.py
src/voice_note_parser/: config.py  openrouter.py  prompt.py  service.py  validate.py
tests/: test_bot.py  test_cli_config.py  test_prompt.py  test_service.py  test_storage.py  test_tasks.py  test_validate.py
tests/llm/: test_cli_config.py  test_prompt.py  test_service.py  test_validate.py
tests/storage/: test_import_jsonl.py  test_repositories.py
tests/telegram_bot/: test_capture_persistence.py  test_context.py  test_obsidian_export.py  test_task_management.py
