[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-bot-tg"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22,<4",
    "httpx>=0.28,<1",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "tzdata>=2025.2",
    "requests>=2.32,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.9,<1",
    "mypy>=1.11,<2",
]

[project.scripts]
parse-note = "packages.llm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
